--- a/app/views/playbooks/index.html.erb
+++ b/app/views/playbooks/index.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     <% @playbooks.each do |playbook| %>
       <tr>
-        <td><%= link_to playbook.name, user_playbook_path(current_user, playbook), id: playbook.name %></td>
+        <td><%= link_to playbook.name, user_playbook_path(current_user, playbook), class: "playbook_anchor" %></td>
         <td><%= playbook.description %></td>
       </tr>
     <% end %>
