--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
                 <%= link_to "Profile", user_path(current_user), class: 'nav-link' %>
               </li>
               <li class='nav-item'>
-                <%= link_to "Playbooks", user_playbooks_path(current_user), class:'nav-link' %>
+                <%= link_to "Playbooks", user_playbooks_path(current_user), class:'nav-link', data: { id: current_user.id } %>
               </li>
               <li class='nav-item'>
                 <%= link_to "Plays", user_plays_path(current_user), class:'nav-link' %>
