AJAX call to playbooks index working initially

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,10 @@
               A Playbook Manager for Football Coaches
           </span>
         </div>
-      </nav> <%= yield %>
+      </nav> 
+      <div id="main-content-area">
+        <%= yield %>
+      </div>
   </div>
   </body>
 </html>
