--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             </li>
             <% if logged_in? %>
               <li class='nav-item'>
-                <%= link_to "Profile", user_path(current_user), class: 'nav-link' %>
+                <%= link_to "Profile", user_path(current_user), class: 'nav-link', data: {id: current_user.id } %>
               </li>
               <li class='nav-item'>
                 <%= link_to "Playbooks", user_playbooks_path(current_user), class:'nav-link', data: { id: current_user.id } %>
